Сделал страницу экологии

--- a/src/index.html
+++ b/src/index.html
@@ -604,12 +604,12 @@
               <li class="text-base--400">контролировать воздействие на природу не только на местном, но и на глобальном уровне.</li>
             </ul>
           </div>
-          <div class="home__ecology__our-works-video" data-video-controller data-modal-target="#home__ecology__our-works-video--modal">
+          <div class="video" data-video-controller data-modal-target="#video--modal">
             <video loop muted autoplay>
               <source src="video/home_ecology.webm" type="video/webm" />
             </video>
-            <div class="home__ecology__our-works-video__info" data-video-poster>
-              <svg class="home__ecology__our-works-video__info__icon" xmlns="http://www.w3.org/2000/svg" width="43" height="47" viewBox="0 0 43 47" fill="none">
+            <div class="video__info" data-video-poster>
+              <svg class="video__info__icon" xmlns="http://www.w3.org/2000/svg" width="43" height="47" viewBox="0 0 43 47" fill="none">
                 <path
                   d="M39 17.5198C43.6667 20.2142 43.6667 26.9499 39 29.6442L11.25 45.6657C6.58334 48.36 0.749998 44.9921 0.749998 39.6035L0.749999 7.56057C0.75 2.17196 6.58333 -1.19592 11.25 1.49838L39 17.5198Z"
                   fill="#FD5D39"
@@ -618,9 +618,9 @@
               <p class="text-description--400">Выпустили в воду более 25 тысяч мальков стерляди</p>
             </div>
           </div>
-          <div id="home__ecology__our-works-video--modal" class="home__ecology__our-works-video--modal">
-            <div class="home__ecology__our-works-video--modal-content">
-              <button class="btn-orange text-base--400 home__ecology__our-works-video--modal-close" data-modal-close>Закрыть</button>
+          <div id="video--modal" class="video--modal">
+            <div class="video--modal-content">
+              <button class="btn-orange text-base--400 video--modal-close" data-modal-close>Закрыть</button>
               <video controls controlsList="nofullscreen" disablepictureinpicture>
                 <source src="video/home_ecology.webm" type="video/webm" />
               </video>
@@ -632,7 +632,7 @@
       <!-- Блок 4: Новости -->
       <section class="home__news">
         <div class="home__news-title">
-          <h2>Новости</h2>
+          <h2 class="text-fiord">Новости</h2>
           <div class="home__news-title__controls">
             <button class="home__news-title__controls__arrow" data-swipe-prev>
               <svg xmlns="http://www.w3.org/2000/svg" width="14" height="31" viewBox="0 0 14 31" fill="none">
@@ -661,120 +661,120 @@
             </div>
           </div>
         </div>
-        <div class="home__news-cards" data-swipe>
-          <a href="pages/home/news-details.html" class="home__news-wrapper-card">
-            <span class="home__news-card__date text-description--300">19 сентября</span>
-            <div class="home__news-card">
-              <div class="home__news-card__image">
+        <div class="cards-news" data-swipe>
+          <a href="pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">19 сентября</span>
+            <div class="card-news">
+              <div class="card-news__image">
                 <img src="img/home/block4-news/news1.webp" alt="Коллеги из Эн+ Тепло Волга групповое фото" />
               </div>
-              <div class="home__news-card__content">
-                <div class="home__news-card__tags">
-                  <span class="home__news-card__tag text-description--300">Эн+ Тепло Волга</span>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Эн+ Тепло Волга</span>
                 </div>
-                <div class="home__news-card__info">
+                <div class="card-news__info">
                   <p class="caption--500">120 этажей вверх: марафон по-нижегородски</p>
                   <p class="text-description--400">Более 50 коллег из «Эн+ Тепло Волга» приняли участие в пятом «Марафоне Нижний Новгород».</p>
                 </div>
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="home__news-wrapper-card">
-            <span class="home__news-card__date text-description--300">16 сентября</span>
-            <div class="home__news-card">
-              <div class="home__news-card__image">
+          <a href="pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">16 сентября</span>
+            <div class="card-news">
+              <div class="card-news__image">
                 <img src="img/home/block4-news/news2.webp" alt="Коллеги из Эн+ Тепло Волга в учебном классе" />
               </div>
-              <div class="home__news-card__content">
-                <div class="home__news-card__tags">
-                  <span class="home__news-card__tag text-description--300">Теплосети</span>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Теплосети</span>
                 </div>
-                <div class="home__news-card__info">
+                <div class="card-news__info">
                   <p class="caption--500">Безопасность по-новому</p>
                   <p class="text-description--400">В «Теплосетях» прошла двухдневная коучинговая сессия по охране труда для руководителей «ЭН+ ТЕПЛО ВОЛГА».</p>
                 </div>
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="home__news-wrapper-card">
-            <span class="home__news-card__date text-description--300">26 августа</span>
-            <div class="home__news-card">
-              <div class="home__news-card__image">
+          <a href="pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">26 августа</span>
+            <div class="card-news">
+              <div class="card-news__image">
                 <img src="img/home/block4-news/news3.webp" alt="Бестраншейный прокладчик труд в работе" />
               </div>
-              <div class="home__news-card__content">
-                <div class="home__news-card__tags">
-                  <span class="home__news-card__tag text-description--300">Теплосети</span>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Теплосети</span>
                 </div>
-                <div class="home__news-card__info">
+                <div class="card-news__info">
                   <p class="caption--500">130 метров под землей</p>
                   <p class="text-description--400">Новый жилой комплекс «Чкалов» в Нижнем Новгороде получил горячую воду благодаря уникальной технологии бестраншейной прокладки.</p>
                 </div>
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="home__news-wrapper-card">
-            <span class="home__news-card__date text-description--300">05 августа</span>
-            <div class="home__news-card">
-              <div class="home__news-card__image">
+          <a href="pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">05 августа</span>
+            <div class="card-news">
+              <div class="card-news__image">
                 <img src="img/home/block4-news/news4.webp" alt="Сварщик варит трубу" />
               </div>
-              <div class="home__news-card__content">
-                <div class="home__news-card__tags">
-                  <span class="home__news-card__tag text-description--300">Генерация тепла</span>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Генерация тепла</span>
                 </div>
-                <div class="home__news-card__info">
+                <div class="card-news__info">
                   <p class="caption--500">От старых котлов к экологичному будущему</p>
                   <p class="text-description--400">На двух котельных ООО «Генерация тепла» развернулись масштабные работы по реконструкции.</p>
                 </div>
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="home__news-wrapper-card">
-            <span class="home__news-card__date text-description--300">26 августа</span>
-            <div class="home__news-card">
-              <div class="home__news-card__image">
+          <a href="pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">26 августа</span>
+            <div class="card-news">
+              <div class="card-news__image">
                 <img src="img/home/block4-news/news3.webp" alt="Бестраншейный прокладчик труд в работе" />
               </div>
-              <div class="home__news-card__content">
-                <div class="home__news-card__tags">
-                  <span class="home__news-card__tag text-description--300">Теплосети</span>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Теплосети</span>
                 </div>
-                <div class="home__news-card__info">
+                <div class="card-news__info">
                   <p class="caption--500">130 метров под землей</p>
                   <p class="text-description--400">Новый жилой комплекс «Чкалов» в Нижнем Новгороде получил горячую воду благодаря уникальной технологии бестраншейной прокладки.</p>
                 </div>
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="home__news-wrapper-card">
-            <span class="home__news-card__date text-description--300">16 сентября</span>
-            <div class="home__news-card">
-              <div class="home__news-card__image">
+          <a href="pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">16 сентября</span>
+            <div class="card-news">
+              <div class="card-news__image">
                 <img src="img/home/block4-news/news2.webp" alt="Коллеги из Эн+ Тепло Волга в учебном классе" />
               </div>
-              <div class="home__news-card__content">
-                <div class="home__news-card__tags">
-                  <span class="home__news-card__tag text-description--300">Теплосети</span>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Теплосети</span>
                 </div>
-                <div class="home__news-card__info">
+                <div class="card-news__info">
                   <p class="caption--500">Безопасность по-новому</p>
                   <p class="text-description--400">В «Теплосетях» прошла двухдневная коучинговая сессия по охране труда для руководителей «ЭН+ ТЕПЛО ВОЛГА».</p>
                 </div>
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="home__news-wrapper-card">
-            <span class="home__news-card__date text-description--300">05 августа</span>
-            <div class="home__news-card">
-              <div class="home__news-card__image">
+          <a href="pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">05 августа</span>
+            <div class="card-news">
+              <div class="card-news__image">
                 <img src="img/home/block4-news/news4.webp" alt="Сварщик варит трубу" />
               </div>
-              <div class="home__news-card__content">
-                <div class="home__news-card__tags">
-                  <span class="home__news-card__tag text-description--300">Генерация тепла</span>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Генерация тепла</span>
                 </div>
-                <div class="home__news-card__info">
+                <div class="card-news__info">
                   <p class="caption--500">От старых котлов к экологичному будущему</p>
                   <p class="text-description--400">На двух котельных ООО «Генерация тепла» развернулись масштабные работы по реконструкции.</p>
                 </div>
