--- a/src/pages/home/ecology.html
+++ b/src/pages/home/ecology.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Экология</title>
     <link rel="stylesheet" href="../../styles/pages/home/ecology.css" />
     <link rel="stylesheet" href="../../styles/settings/common.css" />
-    <title>Экология</title>
     <script type="module" src="../../js/footer-slider-logos.js"></script>
     <script type="module" src="../../js/header.js"></script>
+    <script type="module" src="../../js/video-control.js"></script>
+    <script type="module" src="../../js/swipe.js"></script>
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -438,7 +440,6 @@
     <main>
       <!-- Блок 1: Главный экран  -->
       <section class="ecology__main-screen">
-        <div class="ecology__main-screen__wrapper-img"></div>
         <div class="ecology__main-screen__content">
           <div class="ecology__main-screen__info">
             <div class="ecology__main-screen__header">
@@ -447,7 +448,7 @@
                 <span class="breadcrumb__no-active">/</span>
                 <span class="breadcrumb__no-active">Экология</span>
               </div>
-              <h1 class="text-fiord">Экология</h1>
+              <h1>Экология</h1>
             </div>
             <div class="ecology__main-screen__description">
               <p class="text-base--400">Забота об окружающей среде и ее охрана являются неотъемлемой частью деятельности «Эн+ Тепло Волга».</p>
@@ -469,7 +470,7 @@
               <p class="text-base--400">объектов социальной инфраструктуры</p>
             </div>
             <div class="ecology__main-screen__fact">
-              <p class="text-base--400">Более</p>
+              <p class="text-base--400 ecology__main-screen__fact--hidden">Более</p>
               <h1 class="text-fiord">614км</h1>
               <p class="text-base--400">тепловых сетей</p>
             </div>
@@ -480,8 +481,213 @@
       <!-- Блок 2: Карточка с картинкой  -->
       <section class="ecology__card-image">
         <div class="ecology__card-info">
-          <h2>Экология</h2>
+          <h2 class="text-fiord">Экология</h2>
           <p>В компании «Эн+ Тепло Волга» охрана природы и забота об экологии — это одна из ключевых задач.</p>
+        </div>
+      </section>
+
+      <!-- Блок 3: Видео  -->
+      <section class="ecology__video">
+        <div class="ecology__video-description">
+          <h3>Ока получила «пополнение»</h3>
+          <p class="text-base--400">
+            Река Ока пополнилась новыми жителями — наши коллеги из «Эн+ Тепло Волга» выпустили в воду более 25 тысяч мальков стерляди. В экологической акции участвовали не только сотрудники компании,
+            но и экологи со школьниками.
+          </p>
+        </div>
+        <div class="video" data-video-controller data-modal-target="#video--modal">
+          <video loop muted autoplay>
+            <source src="../../video/home_ecology.webm" type="video/webm" />
+          </video>
+          <div class="video__info" data-video-poster>
+            <svg class="video__info__icon" xmlns="http://www.w3.org/2000/svg" width="43" height="47" viewBox="0 0 43 47" fill="none">
+              <path
+                d="M39 17.5198C43.6667 20.2142 43.6667 26.9499 39 29.6442L11.25 45.6657C6.58334 48.36 0.749998 44.9921 0.749998 39.6035L0.749999 7.56057C0.75 2.17196 6.58333 -1.19592 11.25 1.49838L39 17.5198Z"
+                fill="#FD5D39"
+              />
+            </svg>
+            <p class="text-description--400">Выпустили в воду более 25 тысяч мальков стерляди</p>
+          </div>
+        </div>
+        <div id="video--modal" class="video--modal">
+          <div class="video--modal-content">
+            <button class="btn-orange text-base--400 video--modal-close" data-modal-close>Закрыть</button>
+            <video controls controlsList="nofullscreen" disablepictureinpicture>
+              <source src="../../video/home_ecology.webm" type="video/webm" />
+            </video>
+          </div>
+        </div>
+      </section>
+
+      <!-- Блок 4: Новости  -->
+      <section class="ecology__news">
+        <div class="ecology__news-title">
+          <h2 class="text-fiord">Новости</h2>
+          <div class="ecology__news-title__controls">
+            <button class="ecology__news-title__controls__arrow" data-swipe-prev>
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="31" viewBox="0 0 14 31" fill="none">
+                <path
+                  d="M3.68001 12.7567C2.27566 14.2463 2.27566 16.7535 3.68014 18.2433L14 29.19L12.2937 31L1.97383 20.0533C1.86995 19.9431 1.75796 19.8243 1.63963 19.6988C-0.546031 17.3803 -0.5468 13.6206 1.63886 11.3022L12.2938 0L14 1.80982L3.68001 12.7567Z"
+                  fill="#FD5D39"
+                />
+              </svg>
+            </button>
+            <button class="ecology__news-title__controls__arrow" data-swipe-next>
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="31" viewBox="0 0 14 31" fill="none">
+                <path
+                  d="M10.32 12.7567C11.7243 14.2463 11.7243 16.7535 10.3199 18.2433L1.71154e-06 29.19L1.70631 31L12.0262 20.0533C12.13 19.9431 12.242 19.8243 12.3604 19.6988C14.546 17.3803 14.5468 13.6206 12.3611 11.3022L1.70618 0L0 1.80982L10.32 12.7567Z"
+                  fill="#FD5D39"
+                />
+              </svg>
+            </button>
+            <div class="ecology__news-title__controls__all-news">
+              <a href="../../pages/home/news.html" class="text-description--300">Все новости</a>
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="15" viewBox="0 0 21 15" fill="none">
+                <path
+                  d="M20.7071 8.20711C21.0976 7.81658 21.0976 7.18342 20.7071 6.79289L14.3431 0.428932C13.9526 0.0384078 13.3195 0.0384078 12.9289 0.428932C12.5384 0.819457 12.5384 1.45262 12.9289 1.84315L18.5858 7.5L12.9289 13.1569C12.5384 13.5474 12.5384 14.1805 12.9289 14.5711C13.3195 14.9616 13.9526 14.9616 14.3431 14.5711L20.7071 8.20711ZM0 7.5V8.5H20V7.5V6.5H0V7.5Z"
+                  fill="#4A586E"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+        <div class="cards-news" data-swipe>
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">19 сентября</span>
+            <div class="card-news">
+              <div class="card-news__image">
+                <img src="../../img/ecology/block4-news/card-bg1.webp" alt="Человек в дождивике собирает метал в поле" />
+              </div>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Эн+ Тепло Волга</span>
+                </div>
+                <div class="card-news__info">
+                  <p class="caption--500">120 этажей вверх: марафон по-нижегородски</p>
+                  <p class="text-description--400">Более 50 коллег из «Эн+ Тепло Волга» приняли участие в пятом «Марафоне Нижний Новгород».</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">16 сентября</span>
+            <div class="card-news">
+              <div class="card-news__image">
+                <img src="../../img/ecology/block4-news/card-bg2.webp" alt="Рыбоохрана идет по реке" />
+              </div>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Теплосети</span>
+                </div>
+                <div class="card-news__info">
+                  <p class="caption--500">Безопасность по-новому</p>
+                  <p class="text-description--400">В «Теплосетях» прошла двухдневная коучинговая сессия по охране труда для руководителей «ЭН+ ТЕПЛО ВОЛГА».</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">26 августа</span>
+            <div class="card-news">
+              <div class="card-news__image">
+                <img src="../../img/ecology/block4-news/card-bg3.webp" alt="Залив моря" />
+              </div>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Теплосети</span>
+                </div>
+                <div class="card-news__info">
+                  <p class="caption--500">130 метров под землей</p>
+                  <p class="text-description--400">Новый жилой комплекс «Чкалов» в Нижнем Новгороде получил горячую воду благодаря уникальной технологии бестраншейной прокладки.</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">05 августа</span>
+            <div class="card-news">
+              <div class="card-news__image">
+                <img src="../../img/ecology/block4-news/card-bg4.webp" alt="Урны с разделением мусора" />
+              </div>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Генерация тепла</span>
+                </div>
+                <div class="card-news__info">
+                  <p class="caption--500">От старых котлов к экологичному будущему</p>
+                  <p class="text-description--400">На двух котельных ООО «Генерация тепла» развернулись масштабные работы по реконструкции.</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">19 сентября</span>
+            <div class="card-news">
+              <div class="card-news__image">
+                <img src="../../img/ecology/block4-news/card-bg1.webp" alt="Человек в дождивике собирает метал в поле" />
+              </div>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Эн+ Тепло Волга</span>
+                </div>
+                <div class="card-news__info">
+                  <p class="caption--500">120 этажей вверх: марафон по-нижегородски</p>
+                  <p class="text-description--400">Более 50 коллег из «Эн+ Тепло Волга» приняли участие в пятом «Марафоне Нижний Новгород».</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">16 сентября</span>
+            <div class="card-news">
+              <div class="card-news__image">
+                <img src="../../img/ecology/block4-news/card-bg2.webp" alt="Рыбоохрана идет по реке" />
+              </div>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Теплосети</span>
+                </div>
+                <div class="card-news__info">
+                  <p class="caption--500">Безопасность по-новому</p>
+                  <p class="text-description--400">В «Теплосетях» прошла двухдневная коучинговая сессия по охране труда для руководителей «ЭН+ ТЕПЛО ВОЛГА».</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">26 августа</span>
+            <div class="card-news">
+              <div class="card-news__image">
+                <img src="../../img/ecology/block4-news/card-bg3.webp" alt="Залив моря" />
+              </div>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Теплосети</span>
+                </div>
+                <div class="card-news__info">
+                  <p class="caption--500">130 метров под землей</p>
+                  <p class="text-description--400">Новый жилой комплекс «Чкалов» в Нижнем Новгороде получил горячую воду благодаря уникальной технологии бестраншейной прокладки.</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+            <span class="card-news__date text-description--300">05 августа</span>
+            <div class="card-news">
+              <div class="card-news__image">
+                <img src="../../img/ecology/block4-news/card-bg4.webp" alt="Урны с разделением мусора" />
+              </div>
+              <div class="card-news__content">
+                <div class="card-news__tags">
+                  <span class="card-news__tag text-description--300">Генерация тепла</span>
+                </div>
+                <div class="card-news__info">
+                  <p class="caption--500">От старых котлов к экологичному будущему</p>
+                  <p class="text-description--400">На двух котельных ООО «Генерация тепла» развернулись масштабные работы по реконструкции.</p>
+                </div>
+              </div>
+            </div>
+          </a>
         </div>
       </section>
     </main>
